tests/fixtures/invalid/bool_add_str.py
# Cannot add Bool and Str
x: bool = True + "hello"
